# hashcode

./: .gitignore  Cargo.toml
helpers/: Cargo.toml
helpers/src/: input_reader.rs  lib.rs  red.rs
qualification2017/: Cargo.toml
qualification2017/src/: main.rs
qualification2018/: Cargo.toml
qualification2018/input/: a.txt
qualification2018/src/: lib.rs  main.rs
qualification2019/: Cargo.toml  b_graph.json
qualification2019/input/: b_cut.txt  b_graph.json
qualification2019/src/: main.rs
qualification2020/: Cargo.toml
qualification2020/src/: lib.rs  main.rs
qualification2021/: Cargo.toml
qualification2021/src/: main.rs
