[package]
name = "qualification2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
helpers = { version = "0.1.0", path = "../helpers" }
rand = "0.8.5"
serde_json = "1.0.87"
threadpool = "1.8.1"
you-can = "0.0.14"
